use parse-domain to chop off subdomain add package-lock.json to git, it should always be committed to lock dependencies make sure we console.error when catching unexpected errors fix favicon alignement in list

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,3 +116,10 @@ body {
     align-items: start;
     padding-top: 18px;
 }
+
+.newsletterlist img.favimg {
+    vertical-align: unset;
+    position: relative;
+    bottom: -2px;
+    padding-right:10px;
+}
